# Trabalho_IPPD

./: README.md
trabalho_r/: Cargo.toml  car_prices2.csv  car_prices3.csv  car_prices4.csv
trabalho_r/src/: main.rs
