[package]
name = "trabalho_r"
version = "0.1.0"
edition = "2021"
authors = ["Raíssa Coelho", "Maria Carmona", "Gerson Menezes"]
description = "Processamento de arquivos CSV"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
rayon = "1.8"
#mpi = "0.5"